--- a/Python for Data Analysis/PFDA_ch02.ipynb
+++ b/Python for Data Analysis/PFDA_ch02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPao4oFdAH6VC3eF3yr0NQ",
+      "authorship_tag": "ABX9TyMjzXh107u2QQe2LR/pkw0f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,8 +51,7 @@
     {
       "cell_type": "code",
       "source": [
-        "records = [json.loads(line) for line in open(path)]\n",
-        "records"
+        "records = [json.loads(line) for line in open(path)]"
       ],
       "metadata": {
         "colab": {
